--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ClassMeet",
+  "name": "classe-virtuelle",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,6 +16,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@stream-io/node-sdk": "^0.1.12",
+    "@stream-io/stream-chat-css": "^5.7.0",
     "@stream-io/video-react-sdk": "^0.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -25,6 +26,8 @@
     "react": "^18.3.1",
     "react-datepicker": "^6.3.0",
     "react-dom": "^18.3.1",
+    "stream-chat": "^8.55.0",
+    "stream-chat-react": "^12.11.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1"
@@ -35,15 +38,15 @@
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.14.3",
-    "postcss": "^8",
+    "postcss": "^8.5.1",
     "prettier": "^3.2.5",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
