--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@stream-io/node-sdk": "^0.1.12",
     "@stream-io/stream-chat-css": "^5.7.0",
-    "@stream-io/video-react-sdk": "^0.5.1",
+    "@stream-io/video-react-sdk": "^0.5.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.4.0",
@@ -33,7 +33,9 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/estree": "^1.0.6",
+    "@types/estree-jsx": "^1.0.5",
+    "@types/node": "^20.17.24",
     "@types/react": "^18",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
